fixed it pom.xml